tests/final/expect/13__ir_reject_parser_recovery_switch_case_missing_colon.diag
Diagnostics:
Error at (6:9): Break statement not within loop or switch
   Spelling: /Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/13__ir_reject_parser_recovery_switch_case_missing_colon.c:6:9
