tests/final/expect/13__ir_reject_parser_recovery_switch_case_missing_colon.pdiag
ParserDiagnostics:
code=1000 line=5 column=9 length=1 kind=0
code=1000 line=8 column=1 length=1 kind=0
